src/objects/Account_Contact_Role__c.object
<CustomObject>
    <description>Related to the Account Role, used to designate an existing contact, under the account, that acts as a primary contact for the associated type of account role.</description>
    <fields>
        <fullName>Account_Name__c</fullName>
        <description>It returns the name account associated to the account role. Used in flows.</description>
        <formula>HYPERLINK(&apos;/&apos;+Account_Role__r.Account__c, Account_Role__r.Account__r.Name, &apos;_self&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_Role__c</fullName>
        <description>Reference to the Account Role</description>
        <label>Account Role</label>
        <referenceTo>Account_Role__c</referenceTo>
        <relationshipLabel>Account Contacts Role</relationshipLabel>
        <relationshipName>Account_Contacts_Role</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>the account referenced</description>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Account Contacts Role</relationshipLabel>
        <relationshipName>Account_Contacts_Role</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Business_Phone__c</fullName>
        <description>Phone of the related contact</description>
        <formula>Contact__r.Phone</formula>
        <label>Phone</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Company_Code__c</fullName>
        <description>Company Internal Code for the employee</description>
        <label>Employee Code</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact_Account__c</fullName>
        <description>Used for flow, to get records</description>
        <formula>Contact__r.AccountId</formula>
        <label>Contact&apos;s Account</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact_And_Functional_Role__c</fullName>
        <description>Concatenation of the contact firstname and functional role of the account role, it is used to display a secondary field when the user is looking for a contact role in a lookup field.</description>
        <formula>Contact__r.FirstName &amp;&quot; &quot;&amp;  Contact__r.LastName &amp;&quot; - &quot;&amp;  TEXT( Account_Role__r.Functional_Role__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Contact and Functional role</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact_Name__c</fullName>
        <formula>Contact__r.LastName +&apos;, &apos;+ Contact__r.FirstName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact_Role_Name__c</fullName>
        <description>A functional role that a Contact belonging to an Account may assume when interacting with an IATA Salesforce functional capability. This designation technically supports the provisioning and delivery of IATA Salesforce functional capabilities.</description>
        <inlineHelpText>Contact Role Name to fill accordingly to the application using the record</inlineHelpText>
        <label>Contact Role Name</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact_Role__c</fullName>
        <description>Identify the role of the contact within the Account Role</description>
        <label>Contact Role</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>ITP Administrator</fullName>
                    <isActive>false</isActive>
                    <label>ITP Administrator</label>
                </value>
                <value>
                    <fullName>ITP Master</fullName>
                    <isActive>false</isActive>
                    <label>ITP Master</label>
                </value>
                <value>
                    <fullName>ITP Trainee</fullName>
                </value>
                <value>
                    <fullName>ITP Training Coordinator</fullName>
                </value>
                <value>
                    <fullName>Primary Contact</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Contact_Roles__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Portal Contact Roles</label>
        <referenceTo>Contact_Roles__c</referenceTo>
        <relationshipLabel>Account Contacts Role</relationshipLabel>
        <relationshipName>Account_Contacts_Role</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Contact__c</fullName>
        <description>Reference to the contact</description>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Account Contacts Role</relationshipLabel>
        <relationshipName>Account_Contacts_Role</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Details__c</fullName>
        <label>Details</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Email__c</fullName>
        <description>Email of the related contact</description>
        <formula>Contact__r.Email</formula>
        <label>Email</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>First_Name__c</fullName>
        <description>First Name of the related contact</description>
        <formula>Contact__r.FirstName</formula>
        <label>First Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Functional_Role__c</fullName>
        <description>Business context this detailed role will be related to</description>
        <label>Functional Role</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Functional_Roles</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Global_ID__c</fullName>
        <displayFormat>aB4{0000000000}</displayFormat>
        <label>Global ID</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>Integration_Status__c</fullName>
        <label>Integration Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Success</fullName>
                </value>
                <value>
                    <fullName>Error</fullName>
                </value>
                <value>
                    <fullName>Queued</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Is_Service_Administrator__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Defines if the related Contact is a Service Administrator for the Service related to the Functional Role specified.</description>
        <label>Is Service Administrator?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Last_Name__c</fullName>
        <description>Last name of the related contact</description>
        <formula>Contact__r.LastName</formula>
        <label>Last Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Personal_Email__c</fullName>
        <formula>Contact__r.Additional_Email__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Personal Email</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Position__c</fullName>
        <formula>Contact__r.Title</formula>
        <label>Position</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Service_Rendered__c</fullName>
        <description>To Which Service the contact is associated</description>
        <inlineHelpText>To Which Service the contact is associated</inlineHelpText>
        <label>Service Rendered</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>GADM</fullName>
                </value>
                <value>
                    <fullName>IFTP</fullName>
                </value>
                <value>
                    <fullName>Medaire</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>TIP</fullName>
                </value>
                <value>
                    <fullName>ONE Source</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Active</fullName>
                </value>
                <value>
                    <fullName>Inactive</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Title__c</fullName>
        <formula>Contact__r.Title</formula>
        <label>Title</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TransferFlag__c</fullName>
        <defaultValue>false</defaultValue>
        <label>TransferFlag</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>UniqueKey__c</fullName>
        <description>use to uniquely identify a record and to prevent duplicates</description>
        <externalId>true</externalId>
        <label>UniqueKey</label>
        <length>70</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>is_primary__c</fullName>
        <description>Indicates if the contact is the primary contact or not.</description>
        <formula>IF(ISBLANK(Contact_Role__c), false, INCLUDES(Contact_Role__c, &quot;Primary Contact&quot;))</formula>
        <label>Primary</label>
        <type>Checkbox</type>
    </fields>
    <label>Account Contact Role</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Contact__c</columns>
        <columns>Service_Rendered__c</columns>
        <columns>Account_Role__c</columns>
        <columns>Contact_Roles__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>RECORDTYPE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>ACR-{000000000}</displayFormat>
        <label>Account Contact Role Id</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Account Contacts Role</pluralLabel>
    <recordTypes>
        <fullName>Functional</fullName>
        <active>true</active>
        <description>Relates to the role of the Contact when interacting within the context of the IATA Customer Portal</description>
        <label>Functional</label>
    </recordTypes>
    <recordTypes>
        <fullName>Group</fullName>
        <active>true</active>
        <description>Group (for participation in cross company/account groupings such as alliances).</description>
        <label>Group</label>
    </recordTypes>
    <recordTypes>
        <fullName>ITP</fullName>
        <active>true</active>
        <label>ITP</label>
    </recordTypes>
    <recordTypes>
        <fullName>Master</fullName>
        <active>true</active>
        <description>Master RecordType</description>
        <label>Master</label>
    </recordTypes>
    <recordTypes>
        <fullName>Payment_Provider_Contact</fullName>
        <active>true</active>
        <description>Record-type related to the payment provider contact</description>
        <label>Payment Provider Contact</label>
    </recordTypes>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>Mandatory_fields_for_primary_contact</fullName>
        <active>true</active>
        <errorConditionFormula>is_primary__c  &amp;&amp; ( First_Name__c = null || Last_Name__c = null || Email__c = null || Position__c = null || Title__c = null || Business_Phone__c = null)</errorConditionFormula>
        <errorMessage>The following Contact fields cannot be empty for Primary Provider Contacts: First name, Last Name, Salutation, Title, Email &amp; Phone.</errorMessage>
    </validationRules>
</CustomObject>